added enums for Event entity